--- a/style.css
+++ b/style.css
@@ -71,13 +71,46 @@ body, html {
 .hero .hero_content h1, .hero .hero_content p {
   color:#fff;
 }
-@media screen and (max-width:767px) and (max-height:415px){
+@media (max-height:415px){
   .hero .hero_content {
-      padding:50px 0;
+      padding:30px 0;
  }
- .hello {
-   margin-top: -10%;
- }
+} 
+/* iPhones horizontal */
+@media (max-height: 414px) {
+  .display-4 {
+    font-size: 2rem;
+  }
+  .lead {
+    font-size: 1.25rem;
+  }
+  .nav-link {
+    font-size: 1.5rem;
+  }
+  .custom-control {
+    transform: scale(1.4,1.4);
+    margin-right: 20px;
+  }
+  .fade-in-delay3 {
+    margin-top: -8px !important;
+  }
+  /* .hello {
+    margin-top: -20%;
+  } */
+}
+
+@media (max-width: 415px){
+  .half-panel {
+    width: 90%;
+    height: 100%;
+    margin-top: 40px;
+    position: relative;
+    padding-bottom: 60px;
+    left: 5%;
+  }
+  .btn {
+    transform: scale(1.2,1.2);
+  }
 }
 
 /*end hero*/
@@ -174,42 +207,6 @@ h5, .card-body {
   }
 }
 
-@media (max-width: 415px){
-  .half-panel {
-    width: 90%;
-    height: 100%;
-    margin-top: 40px;
-    position: relative;
-    padding-bottom: 60px;
-    left: 5%;
-  }
-  .btn {
-    transform: scale(1.2,1.2);
-  }
-}
-
-/* iPhones horizontal */
-@media (max-height: 414px) {
-  .display-4 {
-    font-size: 2rem;
-  }
-  .lead {
-    font-size: 1.25rem;
-  }
-  .nav-link {
-    font-size: 1.5rem;
-  }
-  .custom-control {
-    transform: scale(1.4,1.4);
-    margin-right: 20px;
-  }
-  .fade-in-delay3 {
-    margin-top: -8px !important;
-  }
-  .hello {
-    margin-top: -20%;
-  }
-}
 /* ipads */
 @media (min-width: 720px) {
   .half-panel {
