--- a/style.css
+++ b/style.css
@@ -70,12 +70,22 @@ body, html {
 .hero .hero_content h1, .hero .hero_content p {
   color:#fff;
 }
-@media (max-width:900px) and (max-height:415px){
+/* iphone 8+ landscape */
+@media (max-width:737px) and (max-height:415px){
   .hero .hero_content {
       padding:50px 0;
  }
  .hello {
-   margin-top: 20%;
+   margin-top: 120%;
+ }
+}
+/* iphone x later horizontal */
+@media (min-width:738px) and (max-height:415px){
+  .hero .hero_content {
+      padding:20px 0;
+ }
+ .hello {
+   margin-top: -20%;
  }
 }
 
