--- a/style.css
+++ b/style.css
@@ -71,19 +71,24 @@ body, html {
   color:#fff;
 }
 /* iphone 8+ landscape */
-@media (max-width:737px) and (max-height:415px){
+@media (max-width:737px) and (max-height:500px){
   .hero .hero_content {
       padding:50px 0;
+  }
+
+ .intro, .intro2 {
+  margin-top:-5%;
  }
- .hello {
-   margin-top: 120%;
- }
+
 }
+
 /* iphone x later horizontal */
-@media (min-width:738px) and (max-height:415px){
+@media (min-width:738px) and (max-height:500px){
   .hero .hero_content {
       padding:15px 0;
  }
+
+
 
 }
 
