--- a/style.css
+++ b/style.css
@@ -30,6 +30,9 @@ body, html {
   -moz-user-select:none;
   -ms-user-select:none;
   user-select:none;
+}
+
+body {
   background-color: var(--bg-color);
   color: var(--font-color);
 }
