--- a/style.css
+++ b/style.css
@@ -88,6 +88,9 @@ body {
  .card-body {
   height: 450px;
 }
+.navbar {
+  margin-top: -15px;
+}
 
 }
 
@@ -97,8 +100,9 @@ body {
       padding:15px 0;
       margin-top: 20px;
  }
-
-
+ .navbar {
+   margin-top: -15px;
+ }
 }
 
 /*end hero*/
