--- a/style.css
+++ b/style.css
@@ -93,6 +93,10 @@ body {
   margin-top: -15px;
 }
 
+.navbar-nav {
+  margin-top: -15px;
+}
+
 }
 
 /* iphone x later horizontal */
@@ -153,7 +157,7 @@ h5, .card-body {
 
   .custom-switch {
     transform: scale(1.6,1.6);
-    margin-left: -144px;
+    margin-left: -50px;
     padding-top: 10px;
   }
 
@@ -166,13 +170,6 @@ h5, .card-body {
     max-height: 80px;
   } */
 
-}
-
-@media (min-width: 991.98px) {
-  .custom-control {
-    margin-bottom: 8px;
-      
-  }
 }
 
 .scrolled-down{
@@ -202,7 +199,7 @@ h5, .card-body {
 }
 
 .navbar-nav {
-  align-items: flex-end;
+  align-items: center;
 }
 
 .navbar .nav-link:hover,
@@ -278,8 +275,9 @@ h5, .card-body {
     margin-top: 16%;
   }
 }
+
 /* ipads */
-@media (min-width: 720px) {
+@media (min-width: 750px) {
   .half-panel {
     width: 90%;
     height: 100%;
@@ -288,8 +286,14 @@ h5, .card-body {
     padding-bottom: 60px;
     left: 5%;
   }
-
-
+  .nav-link {
+    font-size: 2rem;
+  }
+  .custom-control {
+    transform: scale(1.8,1.8);
+    padding-top: 8px;
+    margin-left: -50px;
+  }
 }
 @media (max-width: 992px) {
   #testimonials {
@@ -302,7 +306,7 @@ h5, .card-body {
 
 }
 
-@media (min-width: 1023px){
+@media (min-width: 1200px){
   .half-panel {
     width: 100%;
     height: 45%;
@@ -317,6 +321,15 @@ h5, .card-body {
   .navbar {
     max-height: 60px;
   }
+  .nav-link {
+    font-size: 1.5rem;
+  }
+  .custom-switch {
+    transform: scale(1.4,1.4);
+    margin-left: 25px;
+    margin-top: -8px;
+  }
+
 }
 
 @media (min-width: 1365px){
@@ -553,7 +566,7 @@ animation: slideinleft .8s 0s 1 normal forwards;
   animation: fadein 2s 3s 1 normal forwards;
 }
 
-.fade-in-delay3 {
+.fade-in-delay3.is-visible {
   opacity: 0;
   animation-fill-mode: forwards;
   animation: fadein 2s 3.8s 1 normal forwards;
