--- a/style.css
+++ b/style.css
@@ -169,6 +169,33 @@ h5, .card-body {
   /* .navbar {
     max-height: 80px;
   } */
+
+  .hello {
+    margin-top: 30px;
+  }
+
+  .learn-more {
+    margin-top: 80px;
+  }
+
+  .testimonial1 .testi1 h5 {
+    line-height: 30px;
+    font-size: 1.1rem;
+  }
+
+  h4 {
+    font-size: 1.3rem;
+  }
+
+  .card-body {
+    height: 375px;
+  }
+
+  .card-body1 {
+    height: 460px;
+  }
+
+ 
 }
 
 .scrolled-down{
@@ -293,6 +320,43 @@ h5, .card-body {
     padding-top: 8px;
     margin-left: -50px;
   }
+
+  .hello {
+    margin-top: 80px;
+  }
+
+  .lead {
+    font-size: 1.75rem;
+  }
+
+  .learn-more {
+    margin-top: 80px;
+  }
+
+  .btn {
+    transform: scale(1.4,1.4);
+  }
+  .content {
+    font-size: 1.5rem;
+  }
+
+  .display-4 {
+    font-size: 4rem;
+  }
+
+  h4 {
+    font-size: 2rem;
+  }
+
+  .list-items {
+    font-size: 1.3rem;
+  }
+
+  .testimonial1 .testi1 h5 {
+    line-height: 35px;
+    font-size: 1.5rem;
+  }
+
 }
 @media (max-width: 992px) {
   .custom-control{
@@ -317,12 +381,20 @@ h5, .card-body {
     max-height: 60px;
   }
   .nav-link {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
   }
   .custom-switch {
-    transform: scale(1.4,1.4);
+    transform: scale(1.2,1.2);
     margin-left: 25px;
-    margin-top: -8px;
+    margin-top: -10px;
+  }
+
+  .hello {
+    margin-top: 50px;
+  }
+
+  .lead {
+    font-size: 1.75rem;
   }
 
   /* #about{
@@ -381,11 +453,12 @@ h5, .card-body {
 }
 
 .content {
-  font-size: 1.25rem;
+  
   text-indent: 10%;
   padding-left: 2rem;
   padding-right: 2rem;
   top: 1rem;
+  line-height: 2;
 }
 
 .btn-primary {
@@ -407,7 +480,6 @@ h5, .card-body {
 .list-items li {
   padding-top: 1.5vh;
   padding-bottom: 1.5vh;
-  font-size: 110%;
 }
 
 
@@ -846,10 +918,7 @@ Shorthand
   top: -10px;
 }
 
-.testimonial1 .testi1 h5 {
-  line-height: 30px;
-  font-size: 18px;
-}
+
 
 .testimonial1 .testi1 .devider {
   height: 1px;
