--- a/style.css
+++ b/style.css
@@ -111,6 +111,16 @@ body {
  .hello {
    font-size: 2rem;
  }
+ .half-panel {
+  width: 100%;
+  height: 90%;
+  margin-top: 40px;
+  position: relative;
+  padding-bottom: 60px;
+  left: 5%;
+}
+
+
 }
 
 /*end hero*/
@@ -134,15 +144,6 @@ h4 {
 
 h5, .card-body {
   color: var(--card-font-color) !important;
-}
-
-@media (min-width 737px){
-  .display-4 {
-    font-size: 2.2rem;
-  }
-  .lead {
-    font-size: 20% !important;
-  }
 }
 
 /* Most Mobile Devices iphones */
@@ -308,12 +309,12 @@ h5, .card-body {
 /* ipads */
 @media (min-width: 750px) and (min-height: 767px) {
   .half-panel {
-    width: 90%;
+    width: 500px;
     height: 100%;
     margin-top: 40px;
     position: relative;
     padding-bottom: 60px;
-    left: 5%;
+    left: 13%;
   }
   .nav-link {
     font-size: 2rem;
@@ -370,9 +371,9 @@ h5, .card-body {
 
 @media (min-width: 1200px){
   .half-panel {
-    width: 100%;
-    height: 45%;
-    margin-top: 90px;
+    max-width: 100%;
+    height: 80%;
+    margin-top: 40px;
     position: relative;
     padding-bottom: 60px;
     left: 5%;
@@ -405,9 +406,13 @@ h5, .card-body {
     transform: scale(1,1);
   }
 
-  /* #about{
+  #about{
     padding-top: 50px;
-  } */
+  }
+
+  .content{
+    max-width: 100%;
+  }
 
 }
 
@@ -419,6 +424,10 @@ h5, .card-body {
     position: relative;
     padding-bottom: 60px;
     left: 5%;
+  }
+
+  .custom-control{
+    margin-top: -10px;
   }
 }
 /* Change navbar styling on scroll XLarge Devices */
@@ -450,6 +459,15 @@ h5, .card-body {
 }
 } */
 
+.half-panel {
+  width: 75%;
+  height: 80%;
+  margin-top: 40px;
+  position: relative;
+  padding-bottom: 60px;
+  left: 5%;
+}
+
 .intro {
   padding-top: 8%;
   width: 100%;
@@ -461,10 +479,9 @@ h5, .card-body {
 }
 
 .content {
-  
   text-indent: 10%;
-  padding-left: 2rem;
-  padding-right: 2rem;
+  padding-left: 10%;
+  padding-right: 2%;
   top: 1rem;
   line-height: 2;
 }
