--- a/style.css
+++ b/style.css
@@ -619,6 +619,31 @@ h1, h2, h4{
   color: var(--heading-color);
 }
 
+.card-projects {
+  position: relative;
+  padding-top: 300px;
+}
+
+.card-projects .inner {
+  padding-top: 20px;
+  padding-right:10px;
+  padding-bottom: 15px;
+}
+
+.card-projects.btn {
+  align-items: center !important;
+}
+
+.card-projects img {
+  object-fit: cover;
+  position:absolute;
+  top: 10px;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 300px;
+}
+
 .project-div {
   height: 100%;
   width: 100%;
@@ -746,24 +771,34 @@ animation: slideinleft .8s 0s 1 normal forwards;
   animation: fadein 2s 3.8s 1 normal forwards;
 }
 
+.fade-in-delay3 {
+  opacity: 0;
+  animation-fill-mode: forwards;
+  animation: fadein 2s 3.8s 1 normal forwards;
+}
+
 .hidden{
   visibility: hidden;
 }
 
 @keyframes slideinleft {
   from{
+    opacity: 0;
     transform: translateX(-100%);
   }
   to {
+    opacity: 1;
     transform: translateX(0%);
   }
 }
 
 @keyframes slideinright {
   from{
+    opacity: 0;
     transform: translateX(100%);
   }
   to {
+    opacity: 1;
     transform: translateX(0%);
   }
 }
