--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,7 @@ body {
   color:#fff;
 }
 /* iphone 8+ landscape */
-@media (max-width:737px) and (max-height:500px){
+@media (min-width:736px) and (max-height:500px){
   .hero .hero_content {
       padding:50px 0;
       margin-top: 10px;
@@ -199,6 +199,9 @@ h5, .card-body {
 
 /* Most Mobile Devices iphones */
 @media (max-width:737px ) {
+  .navbar {
+    margin-top: 1rem;
+  }
   .half-panel {
     width: 60%;
     height: 90%;
