fix horizontal overscroll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -561,7 +561,7 @@ h5 {
 }
 
 .container {
-  max-width: 100% !important;
+  /* max-width: 100% !important; */
   padding-left: 0 !important;
   padding-right: 0 !important;
 }
