--- a/assets/css/card-style.css
+++ b/assets/css/card-style.css
@@ -37,7 +37,7 @@ h2{
   width: 60px !important;
   background-color: blueviolet !important;
   border-color: blueviolet !important;
-  color: white;
+  color: white !important;
   border-radius: 50%;
   font-size: 1.5rem;
 }
